# liulian-python

./: .gitignore  .pre-commit-config.yaml  404.html  FINAL_REPORT.md  LICENSE  README.md  README.zh.md  index.html  init_prompt.md  mkdocs.yml  pyproject.toml  sitemap.xml
.devcontainer/: devcontainer.json
.github/skills/: PROJECT_ADAPTOR_SKILL_FRAMEWORK_PROPOSAL.md  parent_prompt_project_adaptor.md
.github/skills/project-adaptor/: README.md  SKILL.md
.github/skills/project-adaptor/assets/examples/: example_session_transcript.md
.github/skills/project-adaptor/assets/templates/: adapt_plan_template.yaml  conflict_resolution_template.yaml  report_template.md
.github/skills/project-adaptor/references/: acceptance_criteria.md  conflict_patterns.md  dependency_patterns.md  naming_conventions.md  token_strategies.md  traceability_format.md
.github/skills/project-adaptor/scripts/: api.py  artifact_manager.py  conflict_detector.py  discover_projects.py  token_budgeter.py
.github/skills/timellm-validator/: SKILL.md
.github/workflows/: ci.yml  docs.yml  publish.yml
adapter_guide/: index.html
architecture/: index.html
artifacts/adaptations/adapt_20260209_155126/: config.json  conflict_resolutions.yaml  plan.yaml  report.md
artifacts/adaptations/adapt_20260209_155126/traceability/: step_data.md  step_layers.md  step_models.md  step_utils_infra.md
cli/: index.html
contributing/: index.html
data_loaders/: index.html
docs/: adapter_guide.md  architecture.md  cli.md  contributing.md  data_loaders.md  index.md  manifest_spec.md
docs/models/: torch_models.md
examples/: data_loaders_example.py  experiment_dlinear.yaml  quick_run.py
experiments/swiss_river/: README.md  compare_models.py  run.py  run_experiment.py  run_liulian_experiment.py
experiments/swiss_river/configs/: swiss_river.yaml
liulian/: __init__.py  cli.py
liulian/adapters/: __init__.py
liulian/adapters/dummy/: __init__.py  adapter.py
liulian/data/: __init__.py  base.py  data_factory.py  dataset_custom.py  local.py  m4_dataset.py  manifest.py  prompt_bank.py  seq_dataset.py  spec.py  swiss_river.py  torch_datasets.py
liulian/data/prompt_bank/: ETT.txt  swiss_river.txt
liulian/loggers/: __init__.py  interface.py  local_logger.py  wandb_logger.py
liulian/models/: __init__.py  base.py
liulian/models/torch/: __init__.py  autoformer.py  autoformer_adapter.py  base_adapter.py  dlinear.py  dlinear_adapter.py  fedformer.py  informer.py  informer_adapter.py  itransformer.py  itransformer_adapter.py  losses.py  lstm.py  mamba_model.py  metrics.py  patchtst.py  patchtst_adapter.py  timellm.py  timellm_adapter.py  timemixer.py  timemoe.py  timesnet.py  timexer.py  training_utils.py  transformer.py
liulian/models/torch/layers/: __init__.py  attention.py  autocorrelation.py  autoformer_blocks.py  conv_blocks.py  decomposition.py  embed.py  fourier_correlation.py  masking.py  normalization.py  standard_norm.py  transformer_blocks.py
liulian/optim/: __init__.py  base.py  ray_optimizer.py
liulian/runtime/: __init__.py  experiment.py  spec.py  state_machine.py  trainer.py
liulian/tasks/: __init__.py  base.py  utils.py
liulian/utils/: __init__.py  augmentation.py  helpers.py  masking.py  metrics.py  timefeatures.py  tools.py
liulian/viz/: __init__.py  plots.py
manifest_spec/: index.html
manifests/: swissriver_v1.yaml
models/torch_models/: index.html
plugins/: __init__.py
plugins/hydrology/: __init__.py  swissriver_adapter.py
plugins/hydrology/manifests/: swissriver_v1.yaml
plugins/traffic/: __init__.py  adapter.py
search/: search_index.json
tests/: conftest.py  test_augmentation.py  test_data.py  test_data_components.py  test_experiment_quick.py  test_integration.py  test_loggers.py  test_m4_dataset.py  test_metrics.py  test_models.py  test_optim.py  test_runtime.py  test_tasks.py  test_timefeatures.py
tests/adapters/: test_dummy_adapter.py
tests/data/: test_torch_datasets.py
tests/models/torch/: conftest.py  test_autoformer.py  test_dlinear.py  test_fedformer.py  test_informer.py  test_itransformer.py  test_losses.py  test_mamba.py  test_metrics.py  test_patchtst.py  test_timellm.py  test_timemixer.py  test_timemoe.py  test_timesnet.py  test_timexer.py  test_transformer.py
